# cpp_uuid

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: build.yml  python-package.yml
tests/: benchmarks.py  test_uuid.py
